followup: restore spring ai interview coordination prompts